oxiplate-derive/tests/crates/unreachable/tests/broken/unhandled-prefix-operator.stderr
error: Internal Oxiplate error. Unhandled prefix operator.
 --> tests/broken/unhandled-prefix-operator.rs:4:23
  |
4 | #[oxiplate_inline("{{ @value }}")]
  |                       ^
  |
  = help: Please open an issue: https://github.com/0b10011/oxiplate/issues/new?title=Unhandled+prefix+operator
  = help: Include template that caused the issue.

error: proc-macro derive panicked
 --> tests/broken/unhandled-prefix-operator.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: internal error: entered unreachable code: Internal Oxiplate error. See previous error for more information.

error[E0277]: `Data` doesn't implement `std::fmt::Display`
  --> tests/broken/unhandled-prefix-operator.rs:12:9
   |
11 |           "{}",
   |            -- required by this formatting parameter
12 | /         Data {
13 | |             value: "Hello World!"
14 | |         }
   | |_________^ `Data` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `Data`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `print` (in Nightly builds, run with -Z macro-backtrace for more info)
